--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@google/genai": "^1.33.0",
     "react-dom": "^19.2.3",
     "recharts": "^3.5.1",
-    "react": "^19.2.3"
+    "react": "^19.2.3",
+    "vite": "^7.2.7",
+    "@vitejs/plugin-react": "^5.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
