--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "nano-banana-提示词工坊",
+  "name": "nano-banana-prompt-workshop",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "deploy": "npm run build && npx wrangler pages deploy dist"
   },
   "dependencies": {
-    "lucide-react": "^0.561.0",
     "@google/genai": "^1.33.0",
-    "react-dom": "^19.2.3",
-    "recharts": "^3.5.1",
+    "lucide-react": "^0.561.0",
     "react": "^19.2.3",
-    "vite": "^7.2.7",
-    "@vitejs/plugin-react": "^5.1.2"
+    "react-dom": "^19.2.3",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@cloudflare/workers-types": "^4.20241205.0",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4",
+    "wrangler": "^3.30.1"
   }
 }
