--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,10 @@
-# 示例
+name = "nhotker-prompt-manager"
+compatibility_date = "2025-12-14"
+
+# ⚠️ 关键：这是 Pages，不是 Worker
+pages_build_output_dir = "dist"
+
+# KV 绑定（给 Pages Functions 用）
 [[kv_namespaces]]
 binding = "NANO_DB"
-id = "49f21b2483a04b529f6a6b44ff9239df" 
+id = "替49f21b2483a04b529f6a6b44ff9239df"
