feat: Enhance database connectivity and user feedback
Adds explicit checks and user feedback for database connection status.
Introduces a new `kv:create` script for easier NANO_DB namespace setup.
Improves error handling for API requests and database interactions, returning 503 Service Unavailable for missing DB bindings.
Updates the dashboard to visually indicate database connection status.
Adds network error handling to the API service.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "deploy": "npm run build && npx wrangler pages deploy dist",
-    "pages:deploy": "npx wrangler pages deploy dist"
+    "pages:deploy": "npx wrangler pages deploy dist",
+    "kv:create": "npx wrangler kv:namespace create NANO_DB"
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
