feat: Refactor Cloudflare Pages Functions and improve types
Centralizes API context and environment types, improving type safety and readability within Cloudflare Pages Functions.

Updates `wrangler.toml` to remove duplicate KV namespace configuration, as it's now handled implicitly for Pages. Adds a new `dev:full` script for local development. Updates error messages for `NANO_DB` binding checks to be more concise.

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:full": "wrangler pages dev -- vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "deploy": "npm run build && npx wrangler pages deploy dist",
-    "pages:deploy": "npx wrangler pages deploy dist",
     "kv:create": "npx wrangler kv:namespace create NANO_DB"
   },
   "dependencies": {
