--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev:full": "wrangler pages dev -- vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && npx wrangler pages deploy dist",
-    "kv:create": "npx wrangler kv:namespace create NANO_DB"
+    "deploy": "npm run build && wrangler pages deploy dist",
+    "kv:create": "wrangler kv:namespace create NANO_DB"
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
@@ -29,6 +29,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
-    "wrangler": "^3.30.1"
+    "wrangler": "^3.101.0"
   }
 }
