--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:full": "wrangler pages dev -- vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && wrangler pages deploy dist",
+    "deploy": "npm run build && wrangler deploy",
     "kv:create": "wrangler kv:namespace create NANO_DB"
   },
   "dependencies": {
