feat: Configure Cloudflare Pages KV binding
Integrate KV database binding for Cloudflare Pages deployment.

This change updates the `package.json` to include the `--kv NANO_DB` flag in the `dev:full` script for local development with KV. The `App.tsx` file is updated with more descriptive and varied default prompt modules. The `DEPLOY.md` and `wrangler.toml` files are modified to reflect the move to Cloudflare Pages' dashboard configuration for KV bindings, removing the need for explicit `wrangler.toml` settings and providing clearer deployment instructions.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:full": "wrangler pages dev -- vite",
+    "dev:full": "wrangler pages dev --kv NANO_DB -- vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "kv:create": "wrangler kv:namespace create NANO_DB"
