--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nano-banana-prompt-workshop",
+  "name": "hotker-prompt-studio",
   "private": true,
   "version": "1.0.0",
   "type": "module",
