--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "dev:full": "wrangler pages dev --kv NANO_DB -- vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "kv:create": "wrangler kv:namespace create NANO_DB"
+    "kv:create": "wrangler kv:namespace create NANO_DB",
+    "start": "node server.js"
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
     "lucide-react": "^0.561.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "recharts": "^3.5.1"
+    "recharts": "^3.5.1",
+    "express": "^4.18.2",
+    "better-sqlite3": "^9.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241205.0",
